--- a/client/src/components/views/NavBar/Navbar.css
+++ b/client/src/components/views/NavBar/Navbar.css
@@ -8,6 +8,7 @@
   background-color: #98ddca;
   display: flex;
   align-items: center;
+  font-family: "NanumSquareRound";
 }
 
 .container {
@@ -18,6 +19,7 @@
 }
 
 .menu_logo {
+  font-family: "yg-jalnan";
   font-size: 1.5em;
   display: flex;
   justify-content: center;
@@ -61,4 +63,28 @@
   .menu {
     flex-direction: column;
   }
+}
+
+@font-face {
+  font-family: "NanumSquareRound";
+  src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_two@1.0/NanumSquareRound.woff")
+    format("woff");
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "yg-jalnan";
+  src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_four@1.2/JalnanOTF00.woff")
+    format("woff");
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "CookieRunOTF-Bold";
+  src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_twelve@1.0/CookieRunOTF-Bold00.woff")
+    format("woff");
+  font-weight: normal;
+  font-style: normal;
 }
